# iris

./: .gitignore  .~lock.README.odt#  README.odt  shut_down.sh  shut_down.sh~
calibration_test/: calib.c  calib.c~
external_images/: command.sh
glfw/glew-1.13.0/: CMakeCache.txt
glfw/glfw-3.2/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
glfw/glfw-3.2/docs/: Doxyfile  Makefile  cmake_install.cmake
glfw/glfw-3.2/docs/html/: annotated.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  (+83 more)
glfw/glfw-3.2/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
glfw/glfw-3.2/src/: Makefile  cmake_install.cmake  libglfw.so.3.2
glfw/glfw-3.2/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
glfw/server/: 02_textures-debug  CMakeLists.txt  CMakeLists.txt~  MyShader.cpp  MyShader.cpp~  MyShader.h~  main.cpp  main.cpp~
glfw/server/nbproject/: configurations.xml
glfw/server/nbproject/private/: Default.properties  configurations.xml
glfw/server/resources/: fragment-shader.txt~  fragment-shader_colour.txt  fragment-shader_colour.txt~  vertex-shader.txt~
glfw/server/source/: main.cpp  network_defines.h  network_defines.h~
glfw/server/source/tdogl/: Bitmap.cpp  Bitmap.cpp~
glfw/server_old/: MyShader.cpp  MyShader.h  fragment.frag  main.cpp  vertex.vs
glfw/test/gltexture/: CMakeLists.txt~
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
network/: DebugTransfer.cpp  DebugTransfer.h  NetworkControl.cpp  NetworkControl.h  Packetbuffer.cpp  Packetbuffer.h  ReliableTransfer.cpp  ReliableTransfer.h  SerialCon.cpp  SerialCon.h  Topology.cpp  Topology.h  UnreliableTransfer.cpp  UnreliableTransfer.h
network/crc/: crc.h~
network/socket/: shared.h  shared.h~  socket.c
raspicam/: .LCKnetwork_defines.h~  Buffer.cpp  Buffer.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CommImage.cpp  CommImage.h  High_Res_Worker.cpp  High_Res_Worker.h  Image_Capture.cpp  Image_Capture.h  Low_Res_Worker.cpp  Low_Res_Worker.h  Makefile  RaspiCLI.h  RaspiCamControl.c  RaspiCamControl.h  RaspiPreview.c  RaspiPreview.h  RaspiStill.c  RaspiStill.c~  RaspiTex.c  RaspiTex.c~  RaspiTex.h  RaspiTexUtil.c  RaspiTexUtil.h  SerialCon.cpp  SerialCon.h  cmake_install.cmake  compile_commands.json  main.cpp  network_defines.h  network_defines.h~  testmain.cpp  testmain.cpp~  tga.c  tga.h
raspicam/gl_scenes/: .gitignore  own.c  own.h  own_fragment.glsl  own_fragment.glsl~  own_fragment_3.glsl  own_fragment_3.glsl~  own_fragment_undistort.glsl  own_fragment_undistort_2.glsl  own_vertex.glsl  sobel.c  sobel_alt.c  square.c  square.c~
raspicam/imv_examples/: imv2pgm  imv2txt
raspicam/nbproject/: configurations.xml  project.xml
raspicam/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml
serial_test/: compile.sh  compile.sh~  serial_test (copy).cpp  serial_test.cpp  testprog  virtual_ports.sh  virtual_ports.sh~
server/build-server-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  moc_handleinput.cpp  moc_mainwindow.cpp  server  ui_mainwindow.h
server/build-server-Desktop_Qt_5_7_0_GCC_64bit-Release/: Makefile  moc_handleinput.cpp  moc_mainwindow.cpp  server  ui_mainwindow.h
server/server/: handleinput.cpp  handleinput.h  list_map.cpp  list_map.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network_defines.h~  server.pro
setup/: first.sh  first.sh~  second.sh  second.sh~
training/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  main_old.cpp
training/feature extraction/: Makefile  main
training/random_forest/: CMakeCache.txt  Makefile  cmake_install.cmake  main
training/training/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main_old.cpp
wavelet_code/: CMake.txt~  CMakeCache.txt  Makefile  cmake_install.cmake  test  test.cpp  test.cpp~
weight/: ADS1115_sample.c  aaa  single_conv.c  single_conv.c~  test
zlib/zlib-1.2.8/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example  example64  install_manifest.txt  libz.so.1.2.8  minigzip  minigzip64
(+12 files in other folders)
